# dental-voice-agent

./: AGENT.md  README.md
server/: .env.example  BOT_NEMOTRON_TUTORIAL.md  Dockerfile  batch_eval_runner.py  batch_metrics.csv  batch_results.json  batch_runs.jsonl  bot0.py  bot1.py  bot2.py  bot3.py  bot_eval_server.py  cekura_eval_runner.py  dashboard.py  eval_runner.py  latency.jsonl  metrics.py  nemotron_llm.py  nvidia_stt.py  pcc-deploy.toml  pyproject.toml  results.json  scenarios.py  stage_latency.jsonl  streamlit_dashboard.py  test_batch_eval_runner.py  test_bot2.py  test_bot3.py  test_cekura_eval_runner.py  test_dashboard.py  test_eval_runner.py  test_metrics.py  test_streamlit_dashboard.py  test_tools.py  tools.py
server/batch_artifacts/20260530T215454Z-04cf878b/bot0/ambiguous_date_next_friday_then_correction/: results.json  runs.jsonl
server/batch_artifacts/20260530T215454Z-04cf878b/bot0/ambiguous_time_afternoon/: results.json  runs.jsonl
server/batch_artifacts/20260530T215454Z-04cf878b/bot0/happy_booking_cavity_followup/: results.json  runs.jsonl
server/batch_eval_artifacts/20260530-142202-588d86/01-bot0/: results.json  runs.jsonl
server/batch_eval_artifacts/20260530-142202-588d86/02-bot1/: latency.jsonl  results.json  runs.jsonl
server/docs/: BATCH_EVALUATION_TUTORIAL.md  BOT_NEMOTRON_TUTORIAL.md  BOT_TUTORIAL.md  CEKURA_TUTORIAL.md  EVALUATION_TUTORIAL.md  README.md  eval-report1.md  improvements.md
server/notes/: base_bot0.md  eval_batch.md  eval_cekura.md  eval_dashboard.md  eval_runner.md  latency.md  presentation.md
(+339 files in other folders)
