[project]
name = "dental"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "pandas>=2.3.0",
    "pipecat-ai[gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10",
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
