[project]
name = "dental"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    "streamlit>=1.41,<2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "pytest>=9.0.3",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
